<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#FFFFFFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/information"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/opening_dialog_text"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/opening_tts_engine_setting"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="0.6"
            android:background="@drawable/app_button"
            android:text="@string/open_tts_engine"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/opening_google_play_tts"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0.6"
            android:background="@drawable/app_button"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null" />


    </LinearLayout>


</LinearLayout>