<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_bg_pzl"
    android:orientation="vertical"
    tools:context=".view.education.SpeechListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/colorsSTT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_height_margin_top"
            android:layout_marginBottom="@dimen/list_height_margin_top"
            android:background="@drawable/list_style"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height_size"
                android:layout_weight="1"
                android:contentDescription="@string/colors"
                android:src="@drawable/colors" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/colors"
                android:textColor="@color/button_border_color"
                android:textSize="@dimen/list_height_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shapesSTT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_height_margin_top"
            android:background="@drawable/list_style"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height_size"
                android:layout_weight="1"
                android:contentDescription="@string/shapes"
                android:src="@drawable/shapes" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/shapes"
                android:textColor="@color/button_border_color"
                android:textSize="@dimen/list_height_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/directionSTT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_height_margin_top"
            android:background="@drawable/list_style"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height_size"
                android:layout_weight="1"
                android:contentDescription="@string/directions"
                android:src="@drawable/directions" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/directions"
                android:textColor="@color/button_border_color"
                android:textSize="@dimen/list_height_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emotionSTT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_height_margin_top"
            android:background="@drawable/list_style"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height_size"
                android:layout_weight="1"
                android:contentDescription="@string/emotions"
                android:src="@drawable/emotions" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/emotions"
                android:textColor="@color/button_border_color"
                android:textSize="@dimen/list_height_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/numberSTT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_height_margin_top"
            android:background="@drawable/list_style"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height_size"
                android:layout_weight="1"
                android:contentDescription="@string/numbers"
                android:src="@drawable/numbers" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/numbers"
                android:textColor="@color/button_border_color"
                android:textSize="@dimen/list_height_text_size" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
